fix header z-index

--- a/app/assets/stylesheets/main-header.styl
+++ b/app/assets/stylesheets/main-header.styl
@@ -16,6 +16,7 @@
   border: 0 solid rgba(FOREGROUND, 0.5)
   border-bottom-width: 1px
   border-right-width: 1px
+  z-index 10
 
 
   &:empty
